@@ -1,3 +1,7 @@
+2003-04-09	ujwal
+
+    * Preliminary support for print-to-ansi.
+
 2003-04-08	fabian
     * Added French localization provided by Matt Anton
     
